fix(cheatsheets): Scrollbar in codeblocks now appears only on overflow

--- a/styles/cheatsheet.scss
+++ b/styles/cheatsheet.scss
@@ -107,7 +107,7 @@
         background-color: #0d1117;
         border-radius: 8px;
         margin: 10px 0px;
-        overflow-x: scroll;
+        overflow-x: auto;
 
         &::-webkit-scrollbar {
             height: 12px;
